--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#00FFFFFF</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGray01">#BCBCBC</color>
+
+    <color name="list_back_01">#22e3c6</color>
+    <color name="list_back_02">#6dced6</color>
+    <color name="list_back_03">#c953c5</color>
+
+    <color name="color_white_press">#40FFFFFF</color>
+    <color name="color_white_focused">#99FFFFFF</color>
+
 </resources>
