--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,14 @@
     <color name="color_white_press">#40FFFFFF</color>
     <color name="color_white_focused">#99FFFFFF</color>
 
+    <color name="light_font">#FBFBFB</color>
+    <color name="grey_font">#ff9e9e9e</color>
+    <color name="text_shadow">#7F000000</color>
+    <color name="text_shadow_white">#FFFFFF</color>
+
+    <color name="shade_01">#000000</color>
+    <color name="shade_02">#20000000</color>
+    <color name="shade_03">#00000000</color>
+
+
 </resources>
